--- a/HmiPro/Views/DMes/GrafanaView.xaml
+++ b/HmiPro/Views/DMes/GrafanaView.xaml
@@ -5,9 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" xmlns:ViewModels="clr-namespace:HmiPro.Views.DMes"
              xmlns:dMes="clr-namespace:HmiPro.ViewModels.DMes"
+             xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui"
              mc:Ignorable="d"
              DataContext="{dxmvvm:ViewModelSource Type=dMes:GrafanaViewModel}"
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-    </Grid>
+
+    <dxwui:PageAdornerControl FontSize="10" Margin="0,0,0,0" Header="实时曲线" >
+        <WebBrowser Name="WebBrowser"/>
+    </dxwui:PageAdornerControl>
+
 </UserControl>
