--- a/HmiPro/Views/DMes/SchTaskAxisView.xaml
+++ b/HmiPro/Views/DMes/SchTaskAxisView.xaml
@@ -7,37 +7,46 @@
              xmlns:dMes="clr-namespace:HmiPro.ViewModels.DMes"
              xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
              xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui"
+             xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
              mc:Ignorable="d"
-             DataContext="{dxmvvm:ViewModelSource Type=dMes:SchTaskAxisViewModel}"
+         
              d:DesignHeight="300" d:DesignWidth="300">
-    <dxwui:PageAdornerControl  Header="{Binding Path=WorkCode}" ShowBackButton="True" >
-        <dxg:GridControl Grid.Row="1" ItemsSource="{Binding Path=TaskAxisList}">
-            <dxg:GridControl.View>
-                <dxg:TableView   ShowGroupPanel="False" AllowEditing="False" AllowSorting="False" AllowBandMoving="False" AllowColumnFiltering="False"  AllowBandResizing="False" />
-            </dxg:GridControl.View>
-            <dxg:GridControl.Columns>
-                <dxg:GridColumn Width="3*" Header="轴号" FieldName="axiscode"/>
-                <dxg:GridColumn Width="*" Header="长度" FieldName="length"/>
-                <dxg:GridColumn Width="*" Header="颜色" FieldName="color" />
-                <dxg:GridColumn Width="*" Header="完成率" FieldName="CompletedRate"/>
-                <dxg:GridColumn Width="2*" Header="状态" FieldName="State"/>
-                <dxg:GridColumn Header="操作" FieldName="MachineCode_Axis_IsStarted">
-                    <dxg:GridColumn.DisplayTemplate>
-                        <ControlTemplate>
-                            <Grid >
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                                <Button Grid.Column="0" 
+    <UserControl.Resources>
+        <Style x:Key="BackgroundStyle" BasedOn="{StaticResource {dxgt:GridRowThemeKey ResourceKey=RowStyle}}" TargetType="{x:Type dxg:RowControl}">
+            <Setter Property="Background" Value="Red">
+            </Setter>
+        </Style>
+    </UserControl.Resources>
+    <dxg:GridControl ItemsSource="{Binding Path=TaskAxisList}">
+        <dxg:GridControl.View>
+            <dxg:TableView   ShowGroupPanel="False" AllowEditing="False" AllowSorting="False"
+                             AllowBandMoving="False" AllowColumnFiltering="False"  AllowBandResizing="False"  
+                          
+                             />
+        </dxg:GridControl.View>
+        <dxg:GridControl.Columns >
+            <dxg:GridColumn Width="3*" Header="轴号" FieldName="axiscode"/>
+            <dxg:GridColumn Width="*" Header="长度" FieldName="length"/>
+            <dxg:GridColumn Width="*" Header="颜色" FieldName="color" />
+            <dxg:GridColumn Width="*" Header="完成率" FieldName="CompletedRate"/>
+            <dxg:GridColumn Width="2*" Header="状态" FieldName="State"/>
+            <dxg:GridColumn Header="操作" Width="2*" FieldName="CanStart">
+                <dxg:GridColumn.DisplayTemplate>
+                    <ControlTemplate>
+                        <Grid HorizontalAlignment="Center">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Button Grid.Column="0" 
                                Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=UserControl}, Path=DataContext.StartTaskAxisDoingCommand}"
                                CommandParameter="{Binding  Path=RowData.Row}"
+                               IsEnabled="{Binding Path=RowData.Row.CanStart}"
                                  >开始</Button>
-                            </Grid>
-                        </ControlTemplate>
-                    </dxg:GridColumn.DisplayTemplate>
-                </dxg:GridColumn>
-            </dxg:GridControl.Columns>
-        </dxg:GridControl>
-    </dxwui:PageAdornerControl>
+                        </Grid>
+                    </ControlTemplate>
+                </dxg:GridColumn.DisplayTemplate>
+            </dxg:GridColumn>
+        </dxg:GridControl.Columns>
+    </dxg:GridControl>
 </UserControl>
