--- a/HmiPro/DxWindow.xaml
+++ b/HmiPro/DxWindow.xaml
@@ -46,7 +46,7 @@
         <Border Background="Red" Height="30" Visibility="{Binding Path=TopMessageVisibility}" >
             <TextBlock Text="{Binding TopMessage}" FontSize="22" HorizontalAlignment="Center"></TextBlock>
         </Border>
-        <dxwui:NavigationFrame Grid.Row="1"  x:Name="frame" AnimationType="SlideHorizontal" BackNavigationMode="PreviousScreen" />
+        <dxwui:NavigationFrame Grid.Row="1"  x:Name="frame" AnimationType="SlideHorizontal" BackNavigationMode="Root" />
     </Grid>
 
 </dx:DXWindow>
